--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
 - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 after_success:
   - mvn clean test cobertura:cobertura jacoco:report coveralls:report
-  - bash <(curl -s https://codecov.io/bash) -t d5023e6e-a4ba-4413-b1af-b08f4513864b
+  - bash <(curl -s https://codecov.io/bash)
