added  - a test case to cover one more condition

--- a/src/test/resources/app.properties
+++ b/src/test/resources/app.properties
@@ -1,3 +1,4 @@
 Test_Property=test
 PropertyResolverTest_testProperty=testPropertyValue
 PropertyResolverTest_encryptedProperty=U29tZSBTdHJpbmc=
+PropertyResolverTest_noDefaults=noDefaults
