--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.djr4488</groupId>
     <artifactId>cdilib.utils</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <packaging>jar</packaging>
     <url>https://djr4488.github.io/cdi</url>
 
