--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>8.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- apache commons -->
         <dependency>
