--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,12 @@
             <version>1.1.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- logging -->
         <dependency>
